src/OpenCvSharp/Internal/PInvoke/NativeMethods/stitching/NativeMethods_stitching.cs

using System.Runtime.CompilerServices;
using System.Runtime.InteropServices;

#pragma warning disable 1591
#pragma warning disable CA1401 // P/Invokes should not be visible
#pragma warning disable IDE1006 // Naming style

namespace OpenCvSharp.Internal;

static partial class NativeMethods
{
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus stitching_Stitcher_create(int mode, out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus stitching_Ptr_Stitcher_delete(IntPtr obj);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus stitching_Ptr_Stitcher_get(IntPtr obj, out IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus stitching_Stitcher_registrationResol(OpenCvSafeHandle obj, out double returnValue);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus stitching_Stitcher_setRegistrationResol(OpenCvSafeHandle obj, double resolMpx);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus stitching_Stitcher_seamEstimationResol(OpenCvSafeHandle obj, out double returnValue);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus stitching_Stitcher_setSeamEstimationResol(OpenCvSafeHandle obj, double resolMpx);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus stitching_Stitcher_compositingResol(OpenCvSafeHandle obj, out double returnValue);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus stitching_Stitcher_setCompositingResol(OpenCvSafeHandle obj, double resolMpx);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus stitching_Stitcher_panoConfidenceThresh(OpenCvSafeHandle obj, out double returnValue);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus stitching_Stitcher_setPanoConfidenceThresh(OpenCvSafeHandle obj, double confThresh);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus stitching_Stitcher_waveCorrection(OpenCvSafeHandle obj, out int returnValue);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus stitching_Stitcher_setWaveCorrection(OpenCvSafeHandle obj, int flag);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus stitching_Stitcher_waveCorrectKind(OpenCvSafeHandle obj, out int returnValue);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus stitching_Stitcher_setWaveCorrectKind(OpenCvSafeHandle obj, int kind);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus stitching_Stitcher_estimateTransform_InputArray1(
        OpenCvSafeHandle obj, IntPtr images, out int returnValue);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus stitching_Stitcher_estimateTransform_InputArray2(
        OpenCvSafeHandle obj, IntPtr images,
        IntPtr[] rois, int roisSize1, int[] roisSize2, out int returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus stitching_Stitcher_estimateTransform_MatArray1(
        OpenCvSafeHandle obj, IntPtr[] images, int imagesSize, out int returnValue);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus stitching_Stitcher_estimateTransform_MatArray2(
        OpenCvSafeHandle obj, IntPtr[] images, int imagesSize,
        IntPtr[] rois, int roisSize1, int[] roisSize2, out int returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus stitching_Stitcher_composePanorama1(
        OpenCvSafeHandle obj, IntPtr pano, out int returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus stitching_Stitcher_composePanorama2_InputArray(
        OpenCvSafeHandle obj, IntPtr images, IntPtr pano, out int returnValue);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus stitching_Stitcher_composePanorama2_MatArray(
        OpenCvSafeHandle obj, IntPtr[] images, int imagesSize, IntPtr pano, out int returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus stitching_Stitcher_stitch1_InputArray(
        OpenCvSafeHandle obj, IntPtr images, IntPtr pano, out int returnValue);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus stitching_Stitcher_stitch1_MatArray(
        OpenCvSafeHandle obj, [MarshalAs(UnmanagedType.LPArray)] IntPtr[] images, int imagesSize, 
        IntPtr pano, out int returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus stitching_Stitcher_stitch2_InputArray(
        OpenCvSafeHandle obj, IntPtr images,
        IntPtr[] rois, int roisSize1, int[] roisSize2,
        IntPtr pano, out int returnValue);
    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus stitching_Stitcher_stitch2_MatArray(
        OpenCvSafeHandle obj, IntPtr[] images, int imagesSize,
        IntPtr[] rois, int roisSize1, int[] roisSize2,
        IntPtr pano, out int returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus stitching_Stitcher_component(OpenCvSafeHandle obj, IntPtr returnValue);

    [LibraryImport(DllExtern), UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial ExceptionStatus stitching_Stitcher_workScale(OpenCvSafeHandle obj, out double returnValue);
}
